// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tasks Basic API create sends request 1`] = `
Array [
  Array [
    Object {
      "body": Object {
        "x": 1,
      },
      "method": "POST",
      "url": "/tasks",
    },
    undefined,
  ],
]
`;

exports[`tasks Basic API delete sends request 1`] = `
Array [
  Array [
    Object {
      "method": "DELETE",
      "query": undefined,
      "url": "/tasks/taskId",
    },
  ],
]
`;

exports[`tasks Basic API get sends request 1`] = `
Array [
  Array [
    Object {
      "method": "GET",
      "query": undefined,
      "url": "/tasks/taskId",
    },
    undefined,
  ],
]
`;

exports[`tasks Basic API list sends request 1`] = `
Array [
  Array [
    Object {
      "method": "GET",
      "query": "taskId",
      "url": "/tasks",
    },
    Object {
      "x": 1,
    },
  ],
]
`;

exports[`tasks Basic API update sends request 1`] = `
Array [
  Array [
    Object {
      "body": Object {
        "x": 1,
      },
      "method": "PUT",
      "url": "/tasks/taskId",
    },
    undefined,
  ],
]
`;
